tests/ui/reborrow/coerce-shared-multi-non-zst.stderr
error: implementing `CoerceShared` requires corresponding fields to match, be reborrowable with `CoerceShared`, or coerce a mutable reference field to a shared reference field
  --> $DIR/coerce-shared-multi-non-zst.rs:13:5
   |
LL |     b: u8,
   |     ----- source field `b` has type `u8`
...
LL |     b: u8,
   |     ^^^^^ target field `b` has type `u8`

error: aborting due to 1 previous error

